--- a/config/environment/test178.yaml
+++ b/config/environment/test178.yaml
@@ -2,3 +2,8 @@ platform:
   role:
     tester01: ['18917965476','952754']
   host: http://platform.test.shun178.com
+
+angency:
+  role:
+    tester01: ['15900545910','952754']
+  host: http://agency.test.shun178.com
