--- a/config/url.yaml
+++ b/config/url.yaml
@@ -18,6 +18,14 @@ angency:
   dashboard:
     self: dashboard
 
+company:
+  self: company
+  version: '#'
+  login:
+    self: login
+  dashboard:
+    self: dashboard
+
 
 
 
