--- a/test_data/temp.yaml
+++ b/test_data/temp.yaml
@@ -8,12 +8,51 @@ full-time-bill:
   应发工资（自动计算):
   prefix: 全日制账导入单
 part-time-bill:
-  结算开始日期: [2019/8/3]
-  结算结束日期: [2019/8/3]
-  姓名: [朱友兵]
-  身份证号: [622827197307110910]
-  核算费用: [100]
-  客户代付: [0]
-  应发费用（自动计算）: [100]
-  prefix: 非全日制导入单
+  结算开始日期:
+    - [2019/8/3,2019/8/2]
+    - [2019/8/3]
 
+  结算结束日期:
+    - [2019/8/3,2019/8/2]
+    - [2019/8/4]
+  姓名:
+    - [朱友兵,王]
+    - [朱友兵]
+  身份证号:
+    - [622827197307110910,2222]
+    - [622827197307110910]
+  核算费用:
+    - [100,200]
+    - [101]
+  客户代付:
+    - [0,0]
+    - [0]
+  应发费用（自动计算）:
+    - [100,200]
+    - [101]
+  expect:
+    - 0
+    - 0
+  prefix:
+    - 临时1
+    - 临时2
+
+part-time-bill-1:
+  结算开始日期:
+    - [2019/8/3]
+  结算结束日期:
+    - [2019/8/4]
+  姓名:
+    - [朱友兵]
+  身份证号:
+    - [622827197307110910]
+  核算费用:
+    - [101]
+  客户代付:
+    - [0]
+  应发费用（自动计算）:
+    - [101]
+  expect:
+    - 0
+  prefix:
+    - 临时2
